Fix the spacing below the navigation

--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@ html {
 }
 
 .nav {
-  color: #0084a6;
+  color: #005e76;
   border: 2px solid #8bc9d9;
   border-top: 0;
   border-left: 0;
